fix with align-items:baseline

--- a/src/app/components/KeyValueRow.scss
+++ b/src/app/components/KeyValueRow.scss
@@ -5,7 +5,7 @@
 .info-item {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: baseline;
     margin-bottom: 4px;
 
     span {
